# bordro-hesaplay-c-

./: .gitignore  .vercelignore  MEYER_CANIAS_TOPLANTI_NOTLARI.md  Uğur Akyol - Bordro.xlsx  app.py  main.py  puantaj_calc.py  puantaj_report.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_demo.py  ui_navigation.py  vercel.json
api/: __init__.py  deps.py  main.py  schemas.py
api/routes/: calc.py  report.py
data/: 06-2026 Haziran Meyer Puantaj.xlsx  TEMMUz-sakra-düzeltilmiş.xlsx
docs/: FRONTEND_API.md  PROJECT_OVERVIEW.md
pages/: 2_Aylik_Puantaj_Raporu.py
tests/: test_puantaj_report.py
