[project]
name = "bordro-hesaplayici-api"
version = "1.0.0"
description = "Puantaj hesaplama ve aylık rapor FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "xlrd==1.2.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
]

[tool.vercel]
entrypoint = "main:app"
